# aris-rnd

./: .cursorrules  .dockerignore  .folder_structure.txt  .gitignore  1762860333_1762273725_model_x90_polymer_enclosure_specs_detailed_info.txt  ACCESS_STREAMLIT_UI.md  ALL_ENDPOINTS_VERIFIED.md  ALL_ENDPOINTS_VERIFIED_FINAL.md  ALL_ENDPOINT_RESPONSES.txt  ALL_ENDPOINT_RESPONSES_SUMMARY.md  ALL_IMAGES_EXTRACTED_CONTENT.txt  ALL_ISSUES_RESOLVED.md  ALL_LATEST_CHANGES_FINAL_TEST_REPORT.md  ALL_LATEST_CHANGES_TEST_REPORT.md  ALL_UI_PARAMETERS_API.md  API_CONSOLIDATION_COMPLETE.md  API_CONSOLIDATION_PLAN.md  API_SIMPLIFICATION_SUMMARY.md  API_TEST_RESULTS.md  ARCHITECTURE.md  ARIS_Gateway_API_Environment.postman_environment.json  ARIS_RAG_FastAPI.postman_collection.json  CHANGELOG.md  CHECK_SERVICE_STATUS.md  CLAUDE_DESKTOP_INTEGRATION.md  CODEBASE_DEEP_ANALYSIS.md  CODEBASE_DEEP_STUDY.md  COMPLETE_CODEBASE_ANALYSIS.md  COMPREHENSIVE_FIXES_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONSOLIDATED_API_GUIDE.md  CROSS_LANGUAGE_ANALYSIS.md  CROSS_LANGUAGE_FIX_COMPLETE.md  CROSS_LANGUAGE_TEST_RESULTS.md  CURL_COMMANDS_QUICK_REFERENCE.md  CURL_GET_OCR_BY_PAGE.txt  CURL_SETTINGS_API.md  CURL_TEST_ALL_APIS.sh  CURL_TEST_STORE_IMAGES.sh  CURRENT_PERMISSIONS_SUMMARY.md  (+224 more)
.streamlit/: config.toml
api/: README.md  __init__.py  app.py  consolidated_endpoints.py  focused_endpoints.py  main.py  main_backup_full.py  main_before_params.py  rag_system.py  schemas.py  service.py  settings_endpoints.py  single_endpoint.py  styles.py  unified_api.py
archive/: REINGEST_VUORMAR.sh
config/: .env.example  config_dev.yml  requirements.txt  settings.py
config_backup/: __init__.py  accuracy_config.py  settings.py
database/: manage.sh
diagrams/: 01_high_level_architecture.mmd  02_document_processing_pipeline.mmd  03_query_processing_flow.mmd  04_token_counting_architecture.mmd  05_component_class_diagram.mmd  06_data_flow_with_tokens.mmd  07_parser_fallback_strategy.mmd  08_complete_system_flow.mmd  README.md
docker/: docker-compose.yml
docs/: ACCURACY_GUIDE.md  ACCURACY_IMPROVEMENTS.md  ADDING_MCP_SERVER.md  API_REFERENCE.md  API_USAGE.md  ARIS_RAG_Postman_Collection.json  AUTO_REDEPLOYMENT.md  DEPLOYMENT.md  DIRECT_PORT80_SETUP.md  DOCKER.md  DOCLING_COMPLETION_FIX.md  DOCLING_FIXES_SUMMARY.md  DOCLING_FIX_SUMMARY.md  DOCLING_UI_FIX.md  E2E_TESTING_RESULTS.md  FEATURES.md  HOW_TO_CHECK_PERMISSIONS.md  HOW_TO_OPEN_PORTS.md  HOW_TO_TEST_AND_SHARE_PERMISSIONS.md  HOW_TO_USE_DOCLING.md  LOGGING_GUIDE.md  MAXIMUM_ACCURACY_CONFIG.md  OPENSEARCH_PERMISSIONS_STATUS.md  PORT_CONFIGURATION.md  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.md  PYMUPDF_PROGRESS_FIX.md  PYMUPDF_TIMEOUT_FIX.md  QUICK_START.md  README.md  README_RAG.md  SETUP.md  TEST_DOCLING_RESULTS.md  TEST_RESULTS.md  TEST_RESULTS_AFTER_ADMIN_RESPONSE.md  TEST_RESULTS_PDF.md  TEST_RESULTS_VECTOR_STORES.md  YOUR_OPENSEARCH_PERMISSIONS.md
documentation/: ACCURACY_IMPROVEMENT_PLAN.md  CLEAN_FOLDER_STRUCTURE.md  DEEP_CODEBASE_ANALYSIS_AND_PLAN.md  FIND_OCR_IN_UI.txt  FOLDER_STRUCTURE.md  README.md  README_OCR_TEST.md
emails/: EMAIL_OPENSEARCH_PERMISSIONS_REQUEST.txt  EMAIL_OPENSEARCH_PERMISSIONS_REQUEST_SHORT.txt  (+4 more)
services/agent/: Dockerfile  mcp_servers.json  pyproject.toml  setup.cfg
services/agent/app/: version.py
services/agent/app/agent/: base.py  factory.py  generic.py  manufacturing.py
services/agent/app/clients/: adosea_client.py  intelycx_core_client.py
services/agent/app/config/: settings.py
services/agent/app/core/: __init__.py  formatters.py  llm_tools.py
services/agent/app/core/files/: __init__.py  factory.py  models.py  processor.py  s3_utils.py
services/agent/app/core/files/handlers/: __init__.py  base.py  office.py  pdf.py  text.py
services/agent/app/core/memory/: __init__.py  manager.py  models.py  storage.py
services/agent/app/database/: __init__.py  connection.py  memory_manager.py  models.py  plan_manager.py  serialization.py  unified_plan_manager.py
services/agent/app/llm/: bedrock.py
services/agent/app/mcp/: __init__.py  server_manager.py  tools.py
services/agent/app/planning/: __init__.py  executioner.py  models.py  observer.py  planner.py  websocket_observer.py
services/agent/app/security/: cognito.py  guardrails.py
services/agent/app/server/: main.py  websocket_handler.py
services/agent/app/utils/file_handlers/: __init__.py  base.py  factory.py  office_handlers.py  pdf_handler.py  processor.py  text_handlers.py
services/mcp-servers/intelycx-core/: Dockerfile  README.md  pyproject.toml
services/mcp-servers/intelycx-core/app/: __init__.py  core_client.py  mcp_server.py  server.py
services/mcp-servers/intelycx-core/app/clients/: intelycx_core_client.py
services/mcp-servers/intelycx-email/: .env.example  Dockerfile  EMAIL_DRIVERS.md  README.md  pyproject.toml
services/mcp-servers/intelycx-email/app/: __init__.py  email_client.py  mcp_server.py  server.py
services/mcp-servers/intelycx-email/app/drivers/: __init__.py  base.py  factory.py  log_driver.py  ses_driver.py  smtp_driver.py
services/mcp-servers/intelycx-file-generator/: Dockerfile  README.md  pyproject.toml
services/mcp-servers/intelycx-file-generator/app/: __init__.py  server.py
services/mcp-servers/intelycx-file-generator/app/generators/: __init__.py  pdf_generator.py
services/mcp-servers/intelycx-file-generator/app/storage/: __init__.py  base.py  factory.py  s3_storage.py
services/mcp-servers/intelycx-rag/: Dockerfile  README.md  pyproject.toml
services/mcp-servers/intelycx-rag/app/: config.py  models.py  server.py
services/mcp-servers/intelycx-rag/app/chunking/: __init__.py  base.py  factory.py  fixed_size.py  recursive.py  semantic.py
services/mcp-servers/intelycx-rag/app/embeddings/: __init__.py  base.py  bedrock.py  local.py  openai_embeddings.py
services/mcp-servers/intelycx-rag/app/services/: database.py  document_processor.py  embeddings.py  opensearch_client.py  search_service.py
services/mcp-servers/intelycx-rag/app/vector_stores/: __init__.py  base.py  opensearch.py  pgvector.py  qdrant.py
(+690 files in other folders)
