[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelycx-file-generator-mcp-server"
version = "0.1.0"
description = "Intelycx File Generator MCP Server for PDF generation using FastMCP"
authors = [
    {name = "Intelycx", email = "dev@intelycx.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.11.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "starlette>=0.27.0",
    "reportlab>=4.0.0",
    "boto3>=1.34.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
intelycx-file-generator-mcp-server = "app.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
